salesforce/force-app/main/default/objects/Pet__c/Pet__c.object-meta.xml
<CustomObject>
    <description>Synthetic pet records for the AI access cost experiment.</description>
    <label>Pet</label>
    <nameField>
        <label>Pet Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pets</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>