salesforce/force-app/main/default/objects/Pet__c/fields/Behavior_Risk__c.field-meta.xml
<CustomField>
    <fullName>Behavior_Risk__c</fullName>
    <label>Behavior Risk</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>