salesforce/force-app/main/default/objects/Pet__c/fields/Chaos__c.field-meta.xml
<CustomField>
    <fullName>Chaos__c</fullName>
    <label>Chaos</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>