salesforce/force-app/main/default/objects/Pet__c/fields/Energy__c.field-meta.xml
<CustomField>
    <fullName>Energy__c</fullName>
    <label>Energy</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Low</fullName><default>false</default><label>Low</label></value>
            <value><fullName>Medium</fullName><default>false</default><label>Medium</label></value>
            <value><fullName>High</fullName><default>false</default><label>High</label></value>
            <value><fullName>Extreme</fullName><default>false</default><label>Extreme</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>