salesforce/force-app/main/default/objects/Pet__c/fields/Good_With_Kids__c.field-meta.xml
<CustomField>
    <fullName>Good_With_Kids__c</fullName>
    <label>Good With Kids</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Yes</fullName><default>false</default><label>Yes</label></value>
            <value><fullName>Maybe</fullName><default>false</default><label>Maybe</label></value>
            <value><fullName>No</fullName><default>false</default><label>No</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>