salesforce/force-app/main/default/objects/Pet__c/fields/Publicly_Displayed__c.field-meta.xml
<CustomField>
    <fullName>Publicly_Displayed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Publicly Displayed</label>
    <type>Checkbox</type>
</CustomField>