salesforce/force-app/main/default/objects/Pet__c/fields/Species__c.field-meta.xml
<CustomField>
    <fullName>Species__c</fullName>
    <label>Species</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Dog</fullName><default>false</default><label>Dog</label></value>
            <value><fullName>Cat</fullName><default>false</default><label>Cat</label></value>
            <value><fullName>Goat</fullName><default>false</default><label>Goat</label></value>
            <value><fullName>Parrot</fullName><default>false</default><label>Parrot</label></value>
            <value><fullName>Rabbit</fullName><default>false</default><label>Rabbit</label></value>
            <value><fullName>Ferret</fullName><default>false</default><label>Ferret</label></value>
            <value><fullName>Pig</fullName><default>false</default><label>Pig</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>