salesforce/force-app/main/default/objects/Pet__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Available</fullName><default>false</default><label>Available</label></value>
            <value><fullName>Pending</fullName><default>false</default><label>Pending</label></value>
            <value><fullName>Adopted</fullName><default>false</default><label>Adopted</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>